# API_Testing_Agent

./: .env  .env.example  .gitignore  README.md  docker-compose.yml  note_need_logger.txt  project_skeleton.txt  pyproject.toml  skeleton.txt  targets.example.json  targets.json  test.py
docker/: Dockerfile
docs/: headless_rest_api_usage.md  headless_workflow_service_contract.md
scripts/: demo_headless_rest_workflow.ps1
sessions/1/: bot1.session
specs/: blockcypher_btc_minimal.yaml  cms_local.yaml  mempool_space_minimal.yaml
tests/: test_ai_payload_planner_service.py  test_auth_header_builder.py  test_canonical_command_sync_after_feedback.py  test_conversation_router.py  test_execution_engine.py  test_execution_engine_planner_metadata.py  test_execution_unknown_output_ai_description.py  test_feedback_scope_agent_apply.py  test_feedback_scope_refiner.py  test_final_reporter.py  test_finalize_persist_semantics.py  test_full_workflow_cli.py  test_full_workflow_orchestrator.py  test_headless_workflow_service.py  test_hybrid_conversation_router.py  test_intent_parser_backward_compatibility.py  test_intent_parser_natural_language.py  test_interactive_report_service_hybrid.py  test_language_support.py  test_manual_report_workflow_helpers.py  test_manual_review_input_hybrid.py  test_nl_interpreter.py  test_operation_catalog_formatter.py  test_report_intent_agent.py  test_report_intent_agent_hybrid.py  test_report_interaction_graph.py  test_request_runtime_builder.py  test_request_runtime_builder_general.py  test_request_runtime_builder_semantic.py  test_request_understanding_service_ai_first.py  test_request_understanding_service_scope.py  test_review_feedback_scope_ai_first.py  test_review_feedback_scope_refinement.py  test_review_only_orchestrator_scope_resolution.py  test_review_only_orchestrator_target_selection.py  test_runtime_json_body_resolver.py  test_runtime_json_body_resolver_semantic.py  test_schema_faker.py  (+9 more)
(+166 files in other folders)
